parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMA
    ELSE
    FLOAT
    IF
    INT
    LEFT_BRACKET
    RIGHT_BRACKET
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> expression SEMICOLON
Rule 5     statement -> for_loop
Rule 6     statement -> println_statement
Rule 7     for_loop -> FOR LPAREN assignment SEMICOLON condition SEMICOLON increment RPAREN LEFT_BRACE statements RIGHT_BRACE
Rule 8     println_statement -> SYSTEM DOT OUT DOT PRINTLN LPAREN expression RPAREN SEMICOLON
Rule 9     assignment -> ID EQUALS expression
Rule 10    condition -> expression
Rule 11    expression -> expression PLUS expression
Rule 12    expression -> expression MINUS expression
Rule 13    expression -> expression TIMES expression
Rule 14    expression -> expression DIVIDE expression
Rule 15    expression -> LPAREN expression RPAREN
Rule 16    expression -> ID
Rule 17    expression -> NUMBER
Rule 18    expression -> INCREMENT
Rule 19    expression -> STRING
Rule 20    expression -> expression LESS_THAN expression
Rule 21    expression -> expression GREATER_THAN expression
Rule 22    expression -> expression LESS_THAN_EQUAL expression
Rule 23    expression -> expression GREATER_THAN_EQUAL expression
Rule 24    expression -> expression EQUAL_EQUAL expression
Rule 25    expression -> expression NOT_EQUAL expression
Rule 26    increment -> ID INCREMENT

Terminals, with rules where they appear

COLON                : 
COMMA                : 
DIVIDE               : 14
DOT                  : 8 8
ELSE                 : 
EQUALS               : 9
EQUAL_EQUAL          : 24
FLOAT                : 
FOR                  : 7
GREATER_THAN         : 21
GREATER_THAN_EQUAL   : 23
ID                   : 9 16 26
IF                   : 
INCREMENT            : 18 26
INT                  : 
LEFT_BRACE           : 7
LEFT_BRACKET         : 
LESS_THAN            : 20
LESS_THAN_EQUAL      : 22
LPAREN               : 7 8 15
MINUS                : 12
NOT_EQUAL            : 25
NUMBER               : 17
OUT                  : 8
PLUS                 : 11
PRINTLN              : 8
RIGHT_BRACE          : 7
RIGHT_BRACKET        : 
RPAREN               : 7 8 15
SEMICOLON            : 4 7 7 8
STRING               : 19
SYSTEM               : 8
TIMES                : 13
WHILE                : 
error                : 

Nonterminals, with rules where they appear

assignment           : 7
condition            : 7
expression           : 4 8 9 10 11 11 12 12 13 13 14 14 15 20 20 21 21 22 22 23 23 24 24 25 25
for_loop             : 5
increment            : 7
println_statement    : 6
program              : 0
statement            : 2 3
statements           : 1 3 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . expression SEMICOLON
    (5) statement -> . for_loop
    (6) statement -> . println_statement
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression
    (7) for_loop -> . FOR LPAREN assignment SEMICOLON condition SEMICOLON increment RPAREN LEFT_BRACE statements RIGHT_BRACE
    (8) println_statement -> . SYSTEM DOT OUT DOT PRINTLN LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11
    FOR             shift and go to state 12
    SYSTEM          shift and go to state 13

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    for_loop                       shift and go to state 5
    println_statement              shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . expression SEMICOLON
    (5) statement -> . for_loop
    (6) statement -> . println_statement
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression
    (7) for_loop -> . FOR LPAREN assignment SEMICOLON condition SEMICOLON increment RPAREN LEFT_BRACE statements RIGHT_BRACE
    (8) println_statement -> . SYSTEM DOT OUT DOT PRINTLN LPAREN expression RPAREN SEMICOLON

    $end            reduce using rule 1 (program -> statements .)
    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11
    FOR             shift and go to state 12
    SYSTEM          shift and go to state 13

    statement                      shift and go to state 14
    expression                     shift and go to state 4
    for_loop                       shift and go to state 5
    println_statement              shift and go to state 6

state 3

    (2) statements -> statement .

    LPAREN          reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    NUMBER          reduce using rule 2 (statements -> statement .)
    INCREMENT       reduce using rule 2 (statements -> statement .)
    STRING          reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    SYSTEM          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    RIGHT_BRACE     reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> expression . SEMICOLON
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (20) expression -> expression . LESS_THAN expression
    (21) expression -> expression . GREATER_THAN expression
    (22) expression -> expression . LESS_THAN_EQUAL expression
    (23) expression -> expression . GREATER_THAN_EQUAL expression
    (24) expression -> expression . EQUAL_EQUAL expression
    (25) expression -> expression . NOT_EQUAL expression

    SEMICOLON       shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19
    LESS_THAN       shift and go to state 20
    GREATER_THAN    shift and go to state 21
    LESS_THAN_EQUAL shift and go to state 22
    GREATER_THAN_EQUAL shift and go to state 23
    EQUAL_EQUAL     shift and go to state 24
    NOT_EQUAL       shift and go to state 25


state 5

    (5) statement -> for_loop .

    LPAREN          reduce using rule 5 (statement -> for_loop .)
    ID              reduce using rule 5 (statement -> for_loop .)
    NUMBER          reduce using rule 5 (statement -> for_loop .)
    INCREMENT       reduce using rule 5 (statement -> for_loop .)
    STRING          reduce using rule 5 (statement -> for_loop .)
    FOR             reduce using rule 5 (statement -> for_loop .)
    SYSTEM          reduce using rule 5 (statement -> for_loop .)
    $end            reduce using rule 5 (statement -> for_loop .)
    RIGHT_BRACE     reduce using rule 5 (statement -> for_loop .)


state 6

    (6) statement -> println_statement .

    LPAREN          reduce using rule 6 (statement -> println_statement .)
    ID              reduce using rule 6 (statement -> println_statement .)
    NUMBER          reduce using rule 6 (statement -> println_statement .)
    INCREMENT       reduce using rule 6 (statement -> println_statement .)
    STRING          reduce using rule 6 (statement -> println_statement .)
    FOR             reduce using rule 6 (statement -> println_statement .)
    SYSTEM          reduce using rule 6 (statement -> println_statement .)
    $end            reduce using rule 6 (statement -> println_statement .)
    RIGHT_BRACE     reduce using rule 6 (statement -> println_statement .)


state 7

    (15) expression -> LPAREN . expression RPAREN
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 26

state 8

    (16) expression -> ID .

    SEMICOLON       reduce using rule 16 (expression -> ID .)
    PLUS            reduce using rule 16 (expression -> ID .)
    MINUS           reduce using rule 16 (expression -> ID .)
    TIMES           reduce using rule 16 (expression -> ID .)
    DIVIDE          reduce using rule 16 (expression -> ID .)
    LESS_THAN       reduce using rule 16 (expression -> ID .)
    GREATER_THAN    reduce using rule 16 (expression -> ID .)
    LESS_THAN_EQUAL reduce using rule 16 (expression -> ID .)
    GREATER_THAN_EQUAL reduce using rule 16 (expression -> ID .)
    EQUAL_EQUAL     reduce using rule 16 (expression -> ID .)
    NOT_EQUAL       reduce using rule 16 (expression -> ID .)
    RPAREN          reduce using rule 16 (expression -> ID .)


state 9

    (17) expression -> NUMBER .

    SEMICOLON       reduce using rule 17 (expression -> NUMBER .)
    PLUS            reduce using rule 17 (expression -> NUMBER .)
    MINUS           reduce using rule 17 (expression -> NUMBER .)
    TIMES           reduce using rule 17 (expression -> NUMBER .)
    DIVIDE          reduce using rule 17 (expression -> NUMBER .)
    LESS_THAN       reduce using rule 17 (expression -> NUMBER .)
    GREATER_THAN    reduce using rule 17 (expression -> NUMBER .)
    LESS_THAN_EQUAL reduce using rule 17 (expression -> NUMBER .)
    GREATER_THAN_EQUAL reduce using rule 17 (expression -> NUMBER .)
    EQUAL_EQUAL     reduce using rule 17 (expression -> NUMBER .)
    NOT_EQUAL       reduce using rule 17 (expression -> NUMBER .)
    RPAREN          reduce using rule 17 (expression -> NUMBER .)


state 10

    (18) expression -> INCREMENT .

    SEMICOLON       reduce using rule 18 (expression -> INCREMENT .)
    PLUS            reduce using rule 18 (expression -> INCREMENT .)
    MINUS           reduce using rule 18 (expression -> INCREMENT .)
    TIMES           reduce using rule 18 (expression -> INCREMENT .)
    DIVIDE          reduce using rule 18 (expression -> INCREMENT .)
    LESS_THAN       reduce using rule 18 (expression -> INCREMENT .)
    GREATER_THAN    reduce using rule 18 (expression -> INCREMENT .)
    LESS_THAN_EQUAL reduce using rule 18 (expression -> INCREMENT .)
    GREATER_THAN_EQUAL reduce using rule 18 (expression -> INCREMENT .)
    EQUAL_EQUAL     reduce using rule 18 (expression -> INCREMENT .)
    NOT_EQUAL       reduce using rule 18 (expression -> INCREMENT .)
    RPAREN          reduce using rule 18 (expression -> INCREMENT .)


state 11

    (19) expression -> STRING .

    SEMICOLON       reduce using rule 19 (expression -> STRING .)
    PLUS            reduce using rule 19 (expression -> STRING .)
    MINUS           reduce using rule 19 (expression -> STRING .)
    TIMES           reduce using rule 19 (expression -> STRING .)
    DIVIDE          reduce using rule 19 (expression -> STRING .)
    LESS_THAN       reduce using rule 19 (expression -> STRING .)
    GREATER_THAN    reduce using rule 19 (expression -> STRING .)
    LESS_THAN_EQUAL reduce using rule 19 (expression -> STRING .)
    GREATER_THAN_EQUAL reduce using rule 19 (expression -> STRING .)
    EQUAL_EQUAL     reduce using rule 19 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 19 (expression -> STRING .)
    RPAREN          reduce using rule 19 (expression -> STRING .)


state 12

    (7) for_loop -> FOR . LPAREN assignment SEMICOLON condition SEMICOLON increment RPAREN LEFT_BRACE statements RIGHT_BRACE

    LPAREN          shift and go to state 27


state 13

    (8) println_statement -> SYSTEM . DOT OUT DOT PRINTLN LPAREN expression RPAREN SEMICOLON

    DOT             shift and go to state 28


state 14

    (3) statements -> statements statement .

    LPAREN          reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    NUMBER          reduce using rule 3 (statements -> statements statement .)
    INCREMENT       reduce using rule 3 (statements -> statements statement .)
    STRING          reduce using rule 3 (statements -> statements statement .)
    FOR             reduce using rule 3 (statements -> statements statement .)
    SYSTEM          reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    RIGHT_BRACE     reduce using rule 3 (statements -> statements statement .)


state 15

    (4) statement -> expression SEMICOLON .

    LPAREN          reduce using rule 4 (statement -> expression SEMICOLON .)
    ID              reduce using rule 4 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 4 (statement -> expression SEMICOLON .)
    INCREMENT       reduce using rule 4 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 4 (statement -> expression SEMICOLON .)
    FOR             reduce using rule 4 (statement -> expression SEMICOLON .)
    SYSTEM          reduce using rule 4 (statement -> expression SEMICOLON .)
    $end            reduce using rule 4 (statement -> expression SEMICOLON .)
    RIGHT_BRACE     reduce using rule 4 (statement -> expression SEMICOLON .)


state 16

    (11) expression -> expression PLUS . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 29

state 17

    (12) expression -> expression MINUS . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 30

state 18

    (13) expression -> expression TIMES . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 31

state 19

    (14) expression -> expression DIVIDE . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 32

state 20

    (20) expression -> expression LESS_THAN . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 33

state 21

    (21) expression -> expression GREATER_THAN . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 34

state 22

    (22) expression -> expression LESS_THAN_EQUAL . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 35

state 23

    (23) expression -> expression GREATER_THAN_EQUAL . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 36

state 24

    (24) expression -> expression EQUAL_EQUAL . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 37

state 25

    (25) expression -> expression NOT_EQUAL . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . NUMBER
    (18) expression -> . INCREMENT
    (19) expression -> . STRING
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN expression
    (22) expression -> . expression LESS_THAN_EQUAL expression
    (23) expression -> . expression GREATER_THAN_EQUAL expression
    (24) expression -> . expression EQUAL_EQUAL expression
    (25) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 7
    ID              shift and go to state 8
    NUMBER          shift and go to state 9
    INCREMENT       shift and go to state 10
    STRING          shift and go to state 11

    expression                     shift and go to state 38

state 26

    (15) expression -> LPAREN expression . RPAREN
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (20) expression -> expression . LESS_THAN expression
    (21) expression -> expression . GREATER_THAN expression
    (22) expression -> expression . LESS_THAN_EQUAL expression
    (23) expression -> expression . GREATER_THAN_EQUAL expression
    (24) expression -> expression . EQUAL_EQUAL expression
    (25) expression -> expression . NOT_EQUAL expression

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19
    LESS_THAN       shift and go to state 20
    GREATER_THAN    shift and go to state 21
    LESS_THAN_EQUAL shift and go to state 22
    GREATER_THAN_EQUAL shift and go to state 23
    EQUAL_EQUAL     shift and go to state 24
    NOT_EQUAL       shift and go to state 25


state 27

    (7) for_loop -> FOR LPAREN . assignment SEMICOLON condition SEMICOLON increment RPAREN LEFT_BRACE statements RIGHT_BRACE
    (9) assignment -> . ID EQUALS expression

    ID              shift and go to state 41

    assignment                     shift and go to state 40

state 28

    (8) println_statement -> SYSTEM DOT . OUT DOT PRINTLN LPAREN expression RPAREN SEMICOLON

    OUT             shift and go to state 42


state 29

    (11) expression -> expression PLUS expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (20) expression -> expression . LESS_THAN expression
    (21) expression -> expression . GREATER_THAN expression
    (22) expression -> expression . LESS_THAN_EQUAL expression
    (23) expression -> expression . GREATER_THAN_EQUAL expression
    (24) expression -> expression . EQUAL_EQUAL expression
    (25) expression -> expression . NOT_EQUAL expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for LESS_THAN resolved as shift
  ! shift/reduce conflict for GREATER_THAN resolved as shift
  ! shift/reduce conflict for LESS_THAN_EQUAL resolved as shift
  ! shift/reduce conflict for GREATER_THAN_EQUAL resolved as shift
  ! shift/reduce conflict for EQUAL_EQUAL resolved as shift
  ! shift/reduce conflict for NOT_EQUAL resolved as shift
    SEMICOLON       reduce using rule 11 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 11 (expression -> expression PLUS expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19
    LESS_THAN       shift and go to state 20
    GREATER_THAN    shift and go to state 21
    LESS_THAN_EQUAL shift and go to state 22
    GREATER_THAN_EQUAL shift and go to state 23
    EQUAL_EQUAL     shift and go to state 24
    NOT_EQUAL       shift and go to state 25

  ! PLUS            [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! MINUS           [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! TIMES           [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! LESS_THAN       [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! GREATER_THAN    [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! LESS_THAN_EQUAL [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! GREATER_THAN_EQUAL [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! EQUAL_EQUAL     [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! NOT_EQUAL       [ reduce using rule 11 (expression -> expression PLUS expression .) ]


state 30

    (12) expression -> expression MINUS expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (20) expression -> expression . LESS_THAN expression
    (21) expression -> expression . GREATER_THAN expression
    (22) expression -> expression . LESS_THAN_EQUAL expression
    (23) expression -> expression . GREATER_THAN_EQUAL expression
    (24) expression -> expression . EQUAL_EQUAL expression
    (25) expression -> expression . NOT_EQUAL expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for LESS_THAN resolved as shift
  ! shift/reduce conflict for GREATER_THAN resolved as shift
  ! shift/reduce conflict for LESS_THAN_EQUAL resolved as shift
  ! shift/reduce conflict for GREATER_THAN_EQUAL resolved as shift
  ! shift/reduce conflict for EQUAL_EQUAL resolved as shift
  ! shift/reduce conflict for NOT_EQUAL resolved as shift
    SEMICOLON       reduce using rule 12 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 12 (expression -> expression MINUS expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19
    LESS_THAN       shift and go to state 20
    GREATER_THAN    shift and go to state 21
    LESS_THAN_EQUAL shift and go to state 22
    GREATER_THAN_EQUAL shift and go to state 23
    EQUAL_EQUAL     shift and go to state 24
    NOT_EQUAL       shift and go to state 25
